# GitSynapse

./: README.md
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  deploy-gke.yml
docs/: GCP_SETUP.md
git-faas-layer/: Cargo.toml  Dockerfile
git-faas-layer/k8s/: knative-service.yaml
git-faas-layer/src/: error.rs  git_ops.rs  handlers.rs  main.rs  models.rs
k8s/: crd-git-workspace.yaml
openspec/: project.md
openspec/changes/archive/2026-03-18-setup-ci-pipeline/: proposal.md
openspec/changes/archive/2026-03-19-deploy-git-faas-gke/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-deploy-git-faas-gke/specs/cd/: spec.md
openspec/changes/archive/2026-03-19-fix-ci-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-fix-ci-pipeline/specs/ci/: spec.md
openspec/changes/archive/2026-03-19-init-git-faas-rust/: proposal.md
openspec/changes/archive/2026-03-19-init-git-faas-rust/specs/git-core/: spec.md
openspec/changes/init-git-faas-rust/: tasks.md
openspec/changes/init-git-faas-rust/specs/git-core/: spec.md
openspec/changes/setup-ci-pipeline/: design.md  tasks.md
openspec/changes/setup-ci-pipeline/specs/ci/: spec.md
openspec/specs/cd/: spec.md
openspec/specs/ci/: spec.md
openspec/specs/git-core/: spec.md
